# RAG-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: index.html  ingest.py  main.py  query.py  retrieval.py
eval/: golden.jsonl  run_eval.py
eval/fixtures/: handbook.md
