[project]
name = "rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.25",
    "langchain-community==0.3.23",
    "chromadb==0.6.3",
    "ollama==0.4.8",
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pypdf==5.4.0",
    "python-dotenv==1.1.0",
    "python-multipart>=0.0.32",
    "fastembed>=0.8.0",
    "rank-bm25>=0.2.2",
]

[tool.uv]
# This is an application, not a distributable library — don't try to build/install it.
package = false
